--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server-build": "prisma migrate deploy && prisma generate && next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.0",
